Fix gap size for mobile view in collections

--- a/src/styles/l-tools-&-settings/tools-mixins.scss
+++ b/src/styles/l-tools-&-settings/tools-mixins.scss
@@ -43,7 +43,7 @@
     gap: 1rem 0rem;
   } @else if $viewport==desktop{
     grid-template-columns: repeat(52, 1fr);
-    gap: 1rem 6rem;
+    gap: 1rem 1rem;
   }
 }
 
@@ -196,7 +196,7 @@
         .moon-card {
           margin: 0;
           .inner-card {
-            width: clamp(13rem, 20vw, 17rem);
+            width: clamp(13rem, 20vw, 15rem);
           }
         }
     }
@@ -249,7 +249,7 @@
     }
     @if $property == spread-grid {
       @include grid(tablet);
-      margin-top: 11rem;
+      margin-top: 13rem;
       margin-right: 0rem;
       margin-left: 1rem;
     }
